--- a/settings.json
+++ b/settings.json
@@ -4,8 +4,8 @@
     "workbench.startupEditor": "none",
     "workbench.editor.enablePreview": false,
     "workbench.statusBar.visible": false,
-    "workbench.layoutControl.enabled": false,
     "workbench.tree.enableStickyScroll": false,
+    "workbench.activityBar.location": "top",
     "security.workspace.trust.enabled": false,
     "breadcrumbs.enabled": false,
     "editor.fontFamily": "JetBrains Mono, Geist Mono, monospace",
